--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         margin: auto;
         text-align: center;
         height: auto;
-        width: 30%;
+        width: 400px;
         border: red 0.5px solid;
     }
     button{
